--- a/bcs/miejsca/templates/miejsca/mapa.html
+++ b/bcs/miejsca/templates/miejsca/mapa.html
@@ -1,32 +1,21 @@
+{% load static %}
 <!DOCTYPE html>
-<html lang="pl">
+<!--
+ @license
+ Copyright 2019 Google LLC. All Rights Reserved.
+ SPDX-License-Identifier: Apache-2.0
+-->
+<html lang="en">
     <head>
-        <meta charset="utf-8">
-        <title>Miejsca Map</title>
-        <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
-        <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
+        <meta charset="UTF-8">
+        <title>Mapa</title>
+        <link rel="stylesheet" href="{% static 'miejsca/css/mapa.css' %}" />
+        <script type="module" src="{% static 'miejsca/js/mapa.js' %}"></script>
     </head>
     <body>
-        <h1>Miejsca</h1>
-        <div id="map" style="height: 600px;"></div>
-        <script>
-    let map = L.map('map').setView([52.0, 19.0], 6); // Poland center
-
-    L.tileLayer('https://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png', {
-      attribution: '&copy; OpenStreetMap contributors'
-    }).addTo(map);
-
-    fetch("{% url 'miejsca:miejsca_map_data' %}")
-      .then(response => response.json())
-      .then(data => {
-        data.forEach(function(m) {
-          if (m.latitude && m.longitude) {
-            L.marker([m.latitude, m.longitude])
-              .addTo(map)
-              .bindPopup("<b>" + m.nazwa + "</b><br />" + m.adres + "<br />" + m.typ);
-          }
-        });
-      });
-        </script>
+        <h3>Mapa</h3>
+        <div id="map" style="height: 400px;"></div>
+        <script>const GOOGLE_MAPS_API_KEY = "{{ google_maps_api_key }}";</script>
+        <script src="{% static 'miejsca/js/maps-loader.js' %}"></script>
     </body>
 </html>
