--- a/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
+++ b/bcs/wyszukiwarka/templates/wyszukiwarka/search_results.html
@@ -6,7 +6,7 @@
         <title>Search</title>
         <link rel="stylesheet" href="{% static 'wyszukiwarka/css/search.css' %}" />
     </head>
-    <body>
+    <body class="search">
         <h1>Search</h1>
         <form method="get" action="{% url 'wyszukiwarka:search' %}">
             <label>
